[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mountsea-veo"
version = "1.0.0"
description = "Python SDK for Veo 3 API - Generate videos with Google Veo 3, Veo 3 Fast via Mountsea AI. The cheapest Veo API."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Mountsea AI", email = "support@mountsea.ai"}]
keywords = [
    "veo", "veo-api", "veo-3", "veo3", "google-veo",
    "text-to-video", "video-generation", "ai-video",
    "mountsea", "mountsea-ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://shanhaiapi.com/zh/"
Documentation = "https://docs.mountsea.ai/api-reference/veo/introduction"
Repository = "https://github.com/mountsea-ai/veo-api"
Issues = "https://github.com/mountsea-ai/veo-api/issues"

[tool.setuptools.packages.find]
where = ["src"]

